# vdb

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
.claude/: settings.json
bench/: reference.py
include/vdb/: benchmark.hpp  dataset_io.hpp  vector_store.hpp
scratch/: check.cpp
scripts/: aliases.sh
src/: bench_main.cpp  main.cpp
tests/: CMakeLists.txt  benchmark_test.cpp  vector_store_test.cpp
